--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <title>Gist Manager</title>
 </head>
-<body>
+<body ng-app="gistApp">
   <h1>Gist Manager</h1>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.min.js"></script>
+  <div ng-view></div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-route.min.js"></script>
+
+<!-- import modules -->
+<script src="js/app.js"></script>
 </body>
 </html>
