--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,7 @@
 
 <!-- import modules -->
 <script src="js/app.js"></script>
+<script src="js/services.js"></script>
+<script src="js/controllers/login-controller.js"></script>
 </body>
 </html>
