--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
 <script src="js/controllers/login-controller.js"></script>
+<script src="js/controllers/auth-controller.js"></script>
 </body>
 </html>
