--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,8 @@
 <script src="js/services.js"></script>
 <script src="js/controllers/login-controller.js"></script>
 <script src="js/controllers/auth-controller.js"></script>
+<script src="js/controllers/create-controller.js"></script>
+<script src="js/controllers/delete-controller.js"></script>
+<script src="js/controllers/edit-controller.js"></script>
 </body>
 </html>
