add dashboard view && display controller to display single gist

--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,6 @@
 <script src="js/controllers/create-controller.js"></script>
 <script src="js/controllers/delete-controller.js"></script>
 <script src="js/controllers/edit-controller.js"></script>
+<script src="js/controllers/display-gist-controller.js"></script>
 </body>
 </html>
