fix display error in dashboard.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gist Manager</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body ng-app="gistApp">
   <h1>Gist Manager</h1>
