add locationProvider html5mode

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Gist Manager</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <base href='/'>
 </head>
 <body ng-app="gistApp">
   <h1>Gist Manager</h1>
