--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
   <base href='/'>
 
@@ -24,13 +23,15 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+
 <body ng-app="gistApp">
 
 
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
 
 
  <div class="row">
@@ -48,23 +49,22 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <h5 class="white-text">Eleazar Corpuz</h5>
+          <p class="grey-text text-lighten-4">I am a Full Stack Javascript Developer</p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="white-text">Connect with me</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/styel07" target="_blank">Github</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/eleazarcorpuz" target="_blank">Linked In</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://angel.co/eleazarcorpuz" target="_blank">Angel List</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Text
+      © 2015 Eleazar Corpuz
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
