added styles to dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -46,27 +46,11 @@
   <div ng-view></div>
 
  <footer class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Eleazar Corpuz</h5>
-          <p class="grey-text text-lighten-4">I am a Full Stack Javascript Developer</p>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Connect with me</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="https://github.com/styel07" target="_blank">Github</a></li>
-            <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/eleazarcorpuz" target="_blank">Linked In</a></li>
-            <li><a class="grey-text text-lighten-3" href="https://angel.co/eleazarcorpuz" target="_blank">Angel List</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      © 2015 Eleazar Corpuz
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-      </div>
+    <div class="footer-copyright center-align">
+      © 2015 Eleazar Corpuz |
+        <a class="grey-text text-lighten-3" href="https://github.com/styel07" target="_blank">Github</a> |
+        <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/eleazarcorpuz" target="_blank">Linked In</a> |
+        <a class="grey-text text-lighten-3" href="https://angel.co/eleazarcorpuz" target="_blank">Angel List</a>
     </div>
   </footer>
 
