modify styles for index and editGists

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
 
  <div class="row">
+    <img class="responsive-img" src="Github.png" alt="">
     <h1>
       <strong>
         <span id="headerGist">Gist</span>
