--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,8 @@
 
 <body ng-app="gistApp">
 
-
-
-
-
  <div class="row">
-    <img class="responsive-img" src="Github.png" alt="">
+    <img class="responsive-img" src="images/GitHub.png" alt="">
     <h1>
       <strong>
         <span id="headerGist">Gist</span>
