modify dashboard styles, almost done

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gist Manager</title>
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"> -->
 
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
@@ -31,7 +30,7 @@
 <body ng-app="gistApp">
 
  <div class="row">
-    <img class="responsive-img" src="images/GitHub.png" alt="">
+    <img class="responsive-img" src="/images/GitHub.png" alt="">
     <h1>
       <strong>
         <span id="headerGist">Gist</span>
