rebase and merge complete

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body ng-app="gistApp">
+
+  <div class="row header" ng-include="../partials/header.html">
+
+  </div>
+
   <div ng-view></div>
 
   <footer class="page-footer">
