fixed bugs on front page dealing with header partial

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <title>Gist Manager</title>
 
   <!--Import Google Icon Font-->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css"  media="screen,projection"/>
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css"  media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -19,9 +19,7 @@
 
 <body ng-app="gistApp">
 
-  <div class="row header" ng-include="../partials/header.html">
-
-  </div>
+  <!-- <div class="row header" ng-include="'../partials/header.html'"> </div> -->
 
   <div ng-view></div>
 
@@ -34,8 +32,6 @@
     </div>
   </footer>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-route.min.js"></script>
@@ -48,5 +44,8 @@
   <script src="js/controllers/create-controller.js"></script>
   <script src="js/controllers/edit-controller.js"></script>
   <script src="js/controllers/display-gist-controller.js"></script>
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </body>
 </html>
